--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -203,7 +203,7 @@ This section covers changes and additions to userland applications, contributed 
 [[userland-programs]]
 === Userland Application Changes
 An option has been added to change the directory in man:env[1] which closely resemebles the feature in the GNU version of env although it does not support long options.
-gitref:08e8554c4a39[repository=src]
+gitref:08e8554c4a39[repository=src] (Sponsored by Klara, Inc.)
 
 [[userland-contrib]]
 === Contributed Software
@@ -218,10 +218,10 @@ gitref:2ae238160f20[repository=src]
 gitref:d0dcee46d971[repository=src]
 
 `libpcap` has been upgraded to 1.10.5.
-gitref:26f21a6494b4[repository=src]
+gitref:26f21a6494b4[repository=src] (Sponsored by The FreeBSD Foundation)
 
 `tcpdump` has been upgraded to 4.99.5.
-gitref:ec3da16d8bc1[repository=src]
+gitref:ec3da16d8bc1[repository=src] (Sponsored by The FreeBSD Foundation)
 
 `openssl` has been upgraded to 3.0.15.
 gitref:cc43f991ab3e[repository=src]
@@ -233,7 +233,7 @@ gitref:0a096a7b3ae8[repository=src]
 === Deprecated Applications
 
 man:fdisk[8] has been deprecated in favor of man:gpart[8] for a long time but has not been removed, running this application will show a warning to migrate to man:gpart[8].
-gitref:3958be5c29da[repository=src]
+gitref:3958be5c29da[repository=src] (Sponsored by The FreeBSD Foundation)
 
 [[userland-libraries]]
 === Runtime Libraries and API
@@ -244,17 +244,17 @@ gitref:3958be5c29da[repository=src]
 This section covers changes in support for cloud environments.
 
 The `nuageinit` startup script now supports OpenStack network config.
-gitref:ea310d18b222[repository=src]
+gitref:ea310d18b222[repository=src] (Sponsored by OVHCloud)
 
 The FreeBSD project is now publishing OCI-compatible container images.
 gitref:8a688fcc242e[repository=src]
 
 The "shutdown" and "reboot" API in the Amazon EC2 cloud now work for arm64 instances.
 Older instances upgraded to FreeBSD {releaseCurrent} will need to have `debug.acpi.quirks="8"` set in `/boot/loader.conf`.
-gitref:28b881840df7[repository=src]
+gitref:28b881840df7[repository=src] (Sponsored by Amazon)
 
 The FreeBSD projects now publishes "small" EC2 images; these are the "base" images minus debug symbols, tests, 32-bit libraries, the LLDB debugger, the Amazon SSM Agent, and the AWS CLI.
-gitref:953142d6baf3[repository=src]
+gitref:953142d6baf3[repository=src] (Sponsored by Amazon)
 
 [[kernel]]
 == Kernel
@@ -273,19 +273,19 @@ This section covers changes and additions to devices and device drivers since {r
 === Device Drivers
 
 `ena` has been upgraded to 2.8.0.
-gitref:6bf02434bd9a[repository=src]
+gitref:6bf02434bd9a[repository=src] (Sponsored by Amazon, Inc.)
 
 `ice` has been upgraded to 1.43.2-k.
-gitref:38a1655adcb3[repository=src]
+gitref:38a1655adcb3[repository=src] (Sponsored by Intel Corporation)
 
 `ice_ddp` has been upgraded to 1.3.41.0.
-gitref:a9d78bb714e3[repository=src]
+gitref:a9d78bb714e3[repository=src] (Sponsored by Intel Corporation)
 
 Meteor Lake support has been added to the man:ig4[4] driver.
 gitref:56f0fc0011c2[repository=src]
 
 Support for ACPI GPIO _AEI objects has been added.
-gitref:1db6ffb2a482[repository=src]
+gitref:1db6ffb2a482[repository=src] (Sponsored by Amazon)
 
 [[drivers-removals]]
 === Deprecated and Removed Drivers
@@ -294,7 +294,7 @@ man:agp[4] has been planned for removal in FreeBSD 15.0, and the man page now st
 gitref:92af7c97e197[repository=src]
 
 man:syscons[4] has been planned for removal in future releases, and has been noted as deprecated in the man pages to notify users to migrate to man:vt[4].
-gitref:2bc5b1d60512[repository=src]
+gitref:2bc5b1d60512[repository=src] (Sponsored by The FreeBSD Foundation)
 
 [[storage]]
 == Storage
@@ -320,7 +320,7 @@ This section covers the boot loader, boot menu, and other boot-related changes.
 
 The BIOS boot loader now supports gzip and bzip2, but does not support graphics mode.
 (The EFI boot loader is unchanged with support for all of those.)
-gitref:4d3b05a8530e[repository=src]
+gitref:4d3b05a8530e[repository=src] (Sponsored by Netflix)
 
 [[network]]
 == Networking
@@ -336,10 +336,10 @@ Lots of improvements to the network stack, including performance improvements an
 === General Network
 
 AIM(Adaptive Interrupt Moderation) support has been added to the man:igc[4] driver.
-gitref:472a0ccf847a[repository=src]
+gitref:472a0ccf847a[repository=src] (Sponsored by Rubicon Communications, LLC ("Netgate") and BBOX.io)
 
 These features has also been added to the man:lem[4] and man:em[4] drivers.
-gitref:49f12d5b38f6[repository=src]
+gitref:49f12d5b38f6[repository=src] (Sponsored by Rubicon Communications, LLC ("Netgate") and BBOX.io)
 
 [[hardware]]
 == Hardware Support
@@ -381,13 +381,13 @@ This section covers changes to the FreeBSD Ports Collection, package infrastruct
 === Installer
 
 The FreeBSD installer, man:bsdinstall[8], now supports downloading and installing firmware packages after the FreeBSD base system installation is complete.
-gitref:03c07bdc8b31[repository=src]
+gitref:03c07bdc8b31[repository=src] (Sponsored by The FreeBSD Foundation)
 
 [[ports-packages]]
 === Packaging Changes
 
 The package:net/wifi-firmware-kmod@release[] package has been added to the DVD package set in order to provide necessary firmware for wifi drivers.
-gitref:8c6df7ead19c[repository=src]
+gitref:8c6df7ead19c[repository=src] (Sponsored by The FreeBSD Foundation)
 
 [[future-releases]]
 == General Notes Regarding Future FreeBSD Releases
