--- a/website/content/en/releases/14.2R/signatures.adoc
+++ b/website/content/en/releases/14.2R/signatures.adoc
@@ -4,11 +4,11 @@ sidenav: download
 ---
 
 :localRel: 14.2
-:localBranchName: RC1
+:localBranchName: RELEASE
 :localBranchStable: stable/14
 :localBranchReleng: releng/14.2
-:localRelSha256: ../checksums/CHECKSUM.SHA256-FreeBSD-14.2-RC1
-:localRelSha512: ../checksums/CHECKSUM.SHA512-FreeBSD-14.2-RC1
+:localRelSha256: ../checksums/CHECKSUM.SHA256-FreeBSD-14.2-RELEASE
+:localRelSha512: ../checksums/CHECKSUM.SHA512-FreeBSD-14.2-RELEASE
 
 = FreeBSD {localRel}-{localBranchName} Release Checksum Signatures
 
