--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -273,6 +273,10 @@ gitref:56f0fc0011c2[repository=src]
 Support for ACPI GPIO _AEI objects has been added.
 gitref:1db6ffb2a482[repository=src] (Sponsored by Amazon)
 
+man:nvme[4] and man:nvmecontrol[8] have been enabled on all architectures.
+gitref:24687a65dd7f[repository=src], gitref:aba2d7f89dcf[repository=src]
+(Sponsored by Chelsio Communications and Netflix)
+
 [[drivers-removals]]
 === Deprecated and Removed Drivers
 
