--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -229,6 +229,12 @@ gitref:ec3da16d8bc1[repository=src] (Sponsored by The FreeBSD Foundation)
 `unbound` has been upgraded to 1.22.0.
 gitref:0a096a7b3ae8[repository=src]
 
+`libcbor` has been upgraded to 0.11.0.
+gitref:1755b9daa693[repository=src] (Sponsored by The FreeBSD Foundation)
+
+`libfido2` has been upgraded to 1.14.0.
+gitref:128bace5102e[repository=src] (Sponsored by The FreeBSD Foundation)
+
 [[userland-deprecated-programs]]
 === Deprecated Applications
 
@@ -279,6 +285,12 @@ gitref:a9d78bb714e3[repository=src] (Sponsored by Intel Corporation)
 Meteor Lake support has been added to the man:ig4[4] driver.
 gitref:56f0fc0011c2[repository=src]
 
+A new wireless driver supporting some Realtek chipsets is available: man:rtw89[4].
+gitref:a2d1e07f6451[repository=src] (Sponsored by The FreeBSD Foundation)
+
+Support for Realtek 8156/8156B has been moved from from man:cdce[4] to man:ure[4] for improved performance and reliability.
+gitref:630077a84186[repository=src] (Sponsored by The FreeBSD Foundation)
+
 Support for ACPI GPIO _AEI objects has been added.
 gitref:1db6ffb2a482[repository=src] (Sponsored by Amazon)
 
@@ -324,7 +336,7 @@ gitref:4d3b05a8530e[repository=src] (Sponsored by Netflix)
 This section describes changes that affect networking in FreeBSD.
 
 [[network-protocols]]
-== Network Protocols
+=== Network Protocols
 
 Lots of improvements to the network stack, including performance improvements and bug fixes for the man:sctp[4] stack.
 
@@ -336,6 +348,11 @@ gitref:472a0ccf847a[repository=src] (Sponsored by Rubicon Communications, LLC ("
 
 These features has also been added to the man:lem[4] and man:em[4] drivers.
 gitref:49f12d5b38f6[repository=src] (Sponsored by Rubicon Communications, LLC ("Netgate") and BBOX.io)
+
+[[wireless-networking]]
+=== Wireless Networking
+
+The LinuxKPI, particularly for 802.11, has been enhanced to improve the stability of wireless drivers such as man:iwlwifi[4]. (Sponsored by The FreeBSD Foundation)
 
 [[hardware]]
 == Hardware Support
@@ -358,6 +375,13 @@ gitref:34f40baca641[repository=src]
 
 The VNC server in man:bhyve[8] will now show the correct colors when using the package:www/novnc[] client.
 gitref:f9e09dc5b1d5[repository=src]
+
+[[multimedia]]
+== Multimedia
+
+Many improvements to the audio stack including support for hot-swapping in man:mixer[8], and the addition of man:mididump[1].
+gitref:cf9d2fb18433[repository=src] (Sponsored by The FreeBSD Foundation)
+gitref:7224e9f2d4af[repository=src] (Sponsored by The FreeBSD Foundation)
 
 [[ports]]
 == Ports Collection and Package Infrastructure
