--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -199,7 +199,7 @@ This section covers changes and additions to userland applications, contributed 
 
 [[userland-programs]]
 === Userland Application Changes
-An option has been added to change the directory in man:env[1] which closely resemebles the feature in the GNU version of env although it does not support long options.
+An option has been added to change the directory in man:env[1] which closely resembles the feature in the GNU version of env although it does not support long options.
 gitref:08e8554c4a39[repository=src] (Sponsored by Klara, Inc.)
 
 [[userland-contrib]]
