--- a/website/content/en/releases/14.2R/errata.adoc
+++ b/website/content/en/releases/14.2R/errata.adoc
@@ -72,6 +72,9 @@ On affected systems, the man:ispfw[4] kernel module should be loaded from the bo
 Recompiling the package from the ports tree will restore the lost functionality.
 This issue will also resolve itself after the FreeBSD 14.1 EoL, when packages for {releaseBranch} will start being built on FreeBSD {release}.
 
+* The home directory ZFS encryption feature of man:adduser[8] is poorly documented.
+In particular, instructions for automatically unlocking directories at login time are lacking.
+
 [[late-news]]
 == Late-Breaking News
 
