--- a/website/content/en/portmgr/policies_eol.adoc
+++ b/website/content/en/portmgr/policies_eol.adoc
@@ -86,7 +86,18 @@ The _Estimated EoL (end-of-life)_ column gives the earliest date on which that b
 * FreeBSD:14:powerpc64 (only quarterly is updated)
 * FreeBSD:14:powerpc64le (only quarterly is updated)
 
-|14.2-RELEASE + 3 months
+|March 31, 2025
+|releng/14.2 |14.2-RELEASE |releng/14.2 a|
+* FreeBSD:14:aarch64
+* FreeBSD:14:amd64
+* FreeBSD:14:armv6
+* FreeBSD:14:armv7
+* FreeBSD:14:i386
+* FreeBSD:14:powerpc (only quarterly is updated)
+* FreeBSD:14:powerpc64 (only quarterly is updated)
+* FreeBSD:14:powerpc64le (only quarterly is updated)
+
+|September 30, 2025
 |main |n/a |main a|
 * FreeBSD:15:aarch64
 * FreeBSD:15:amd64
