--- a/website/content/en/releases/14.2R/schedule.adoc
+++ b/website/content/en/releases/14.2R/schedule.adoc
@@ -41,7 +41,7 @@ General discussions about the pending release and known issues should be sent to
 |BETA3 builds begin |15 November 2024 |16 November 2024 |Third beta test snapshot.
 |RC1 builds begin |22 November 2024 |22 November 2024 |First release candidate.
 |RELEASE builds begin |29 November 2024 |29 November 2024 |{localRel}-RELEASE builds begin.
-|RELEASE announcement |3 December 2024 |- |{localRel}-RELEASE press release.
+|RELEASE announcement |3 December 2024 |3 December 2024 |{localRel}-RELEASE press release.
 |{localRelPrev} EoL |31 March 2025 |- |{localRelPrev}-RELEASE no longer supported.
 |{localRel} EoL |30 September 2025 |- |{localRel}-RELEASE no longer supported.
 |{localBranchStable} EoL |30 November 2028 |- |{localBranchStable} no longer supported.
