--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -37,7 +37,7 @@
 
 // Set to 'INCLUDE' when the schedule is available.
 
-:beta-upcoming: INCLUDE
+:beta-upcoming: IGNORE
 
 // Set to 'INCLUDE' when the installation images are available.
 
@@ -85,6 +85,15 @@
 
 :rel142-current-major: 14
 :rel142-current: 14.2
+:rel142-current-date: December 3, 2024
+
+:u-rel142-notes: https://www.FreeBSD.org/releases/{rel142-current}R/relnotes/
+:u-rel142-announce: https://www.FreeBSD.org/releases/{rel142-current}R/announce/
+:u-rel142-errata: https://www.FreeBSD.org/releases/{rel142-current}R/errata/
+:u-rel142-hardware: https://www.FreeBSD.org/releases/{rel142-current}R/hardware/
+:u-rel142-installation: https://www.FreeBSD.org/releases/{rel142-current}R/installation/
+:u-rel142-readme: https://www.FreeBSD.org/releases/{rel142-current}R/readme/
+:u-rel142-signatures: https://www.FreeBSD.org/releases/{rel142-current}R/signatures/
 
 :rel141-current-major: 14
 :rel141-current: 14.1
