--- a/website/content/en/where.adoc
+++ b/website/content/en/where.adoc
@@ -39,6 +39,61 @@ For embedded platforms: SD card images are available.
 
 `RELEASE` versions of FreeBSD are the end result of _release engineering_ and are recommended for most users.
 
+[[download-rel142]]
+=== FreeBSD {rel142-current}-RELEASE
+
+[.tblbasic]
+[.tblDownload]
+[width="100%",cols="25%,25%,25%,25%",options="header",]
+|===
+|Installer |VM |SD Card |Documentation
+a|
+* link:{url-rel}/amd64/amd64/ISO-IMAGES/{rel142-current}/[amd64]
+* link:{url-rel}/i386/i386/ISO-IMAGES/{rel142-current}/[i386]
+* link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel142-current}/[aarch64]
+* link:{url-rel}/arm/armv7/ISO-IMAGES/{rel142-current}/[armv7]
+* link:{url-rel}/powerpc/powerpc/ISO-IMAGES/{rel142-current}/[powerpc]
+* link:{url-rel}/powerpc/powerpc64/ISO-IMAGES/{rel142-current}/[powerpc64]
+* link:{url-rel}/powerpc/powerpc64le/ISO-IMAGES/{rel142-current}/[powerpc64le]
+* link:{url-rel}/powerpc/powerpcspe/ISO-IMAGES/{rel142-current}/[powerpcspe]
+* link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel142-current}/[riscv64]
+
+a|
+* link:{url-rel}/VM-IMAGES/README.txt[README]
+* link:{url-rel}/VM-IMAGES/{rel142-current}-RELEASE/amd64/Latest/[amd64]
+* link:{url-rel}/VM-IMAGES/{rel142-current}-RELEASE/i386/Latest/[i386]
+* link:{url-rel}/VM-IMAGES/{rel142-current}-RELEASE/aarch64/Latest/[aarch64]
+* link:{url-rel}/VM-IMAGES/{rel142-current}-RELEASE/riscv64/Latest/[riscv64]
+* link:{url-rel}/CI-IMAGES/{rel142-current}-RELEASE/amd64/Latest/[amd64] (BASIC-CI)
+* link:{url-rel}/CI-IMAGES/{rel142-current}-RELEASE/aarch64/Latest/[aarch64] (BASIC-CI)
+
+a|
+* aarch64
+* {blank}
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel142-current}/[PINE64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel142-current}/[PINE64-LTS]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel142-current}/[ROCK64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel142-current}/[ROCKPRO64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel142-current}/[RPI] (3/4)
+* armv7
+* {blank}
+** link:{url-rel}/arm/armv7/ISO-IMAGES/{rel142-current}/[GENERICSD]
+* riscv64
+* {blank}
+** link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel142-current}/[GENERICSD]
+
+a|
+* {blank}
+* link:../releases/#current[Released]: {rel142-current-date}
+* link:{u-rel142-notes}[Release Notes]
+* link:{u-rel142-readme}[Readme]
+* link:{u-rel142-hardware}[Hardware Compatibility List]
+* link:{u-rel142-installation}[Installation Instructions]
+* link:{u-rel142-errata}[Errata]
+* link:{u-rel142-signatures}[Signed Checksums]
+
+|===
+
 [[download-rel141]]
 === FreeBSD {rel141-current}-RELEASE
 
