--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -200,6 +200,11 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |November 14, 2024
 |15.0-CURRENT after hiding `struct ifnet` and changing man:sound[4]'s device registration KPI.
 
+|1500028
+|gitref:cab31f5633c1ffdd8b24749a3c9dd22c59568503[repository="src",length=12]
+|November 25, 2024
+|15.0-CURRENT after adding a `TDA_PSELECT` flag for early restoration of signal masks.
+
 |===
 
 [[versions-14]]
@@ -703,6 +708,16 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |gitref:8a5a9dbf389e86d278764ababf2f1eb8ee276680[repository="src",length=12]
 |October 15, 2024
 |14.1-STABLE after widening the `flags` field in `vm_object`.
+
+|1402500
+|gitref:4e8444d5750a5d9da9c812e8f6caf6d62862be0a[repository="src",length=12]
+|October 31, 2024
+|14.2-STABLE after it was renamed from 14.2-PRERELEASE.
+
+|1402501
+|gitref:35d2f335e855af816d0a7fe5baf6a3facba84562[repository="src",length=12]
+|December 1, 2024
+|14.2-STABLE after upgrading llvm, clang, compiler-rt, libc++, libunwind, lld, lldb and openmp to llvmorg-19.1.4-0-gaadaa00de76e, a.k.a. 19.1.4 release.
 
 |===
 
@@ -1711,6 +1726,16 @@ Template:
 |gitref:055e875e6077ed1eb2256c3ab5de59a3f6fbce18[repository="src",length=12]
 |April 20, 2024
 |13.3-STABLE after upgrading llvm, clang, compiler-rt, libc++, libunwind, lld, lldb and openmp to llvmorg-18.1.3-0-gc13b7485b879, a.k.a. 18.1.3 release.
+
+|1304500
+|gitref:77064cddb94875dc8d9693a93ac25019b7f62c59[repository="src",length=12]
+|August 1, 2024
+|13.4-STABLE after it was renamed from 13.4-PRERELEASE.
+
+|1304501
+|gitref:b802ab153dd24f468b9bfe33a96c61408e0d0565[repository="src",length=12]
+|December 1, 2024
+|13.4-STABLE after upgrading llvm, clang, compiler-rt, libc++, libunwind, lld, lldb and openmp to llvmorg-19.1.4-0-gaadaa00de76e, a.k.a. 19.1.4 release.
 
 |===
 
