--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -305,7 +305,7 @@ This section covers the boot loader, boot menu, and other boot-related changes.
 [[boot-loader]]
 === Boot Loader Changes
 
-The BIOS boot loader now supports gzip and bzip2, but does not support graphics mode.
+The BIOS boot loader added back support for gzip and bzip2, but removed support graphics mode (by default) to address size problems.
 (The EFI boot loader is unchanged with support for all of those.)
 gitref:4d3b05a8530e[repository=src] (Sponsored by Netflix)
 
