srcmgr: Create a blank landing page
Create a blank landing page with links to the charter, the policies
(which are currently blank) and the team membership.

Sponsored by:		Netflix

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3772,6 +3772,9 @@
 :so-email: {gordon-email}
 :so-team: {delphij}, {des}, {emaste}, {gjb}, {gordon}, {markj}, {oshogbo}, {philip}
 
+// FreeBSD Source Manager Team
+:srcmgr-members: {emaste}, {imp}, {jhb}, {markj}
+
 // FreeBSD cluster entities
 :keymaster-name: Self-Serve SSH key changer
 :keymaster-email: keymaster@FreeBSD.org
