--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -217,11 +217,14 @@ gitref:d0dcee46d971[repository=src]
 `libpcap` has been upgraded to 1.10.5.
 gitref:26f21a6494b4[repository=src] (Sponsored by The FreeBSD Foundation)
 
-`tcpdump` has been upgraded to 4.99.5.
-gitref:ec3da16d8bc1[repository=src] (Sponsored by The FreeBSD Foundation)
+`llvm` has been upgraded to 18.1.6.
+gitref:f1e3279983d6[repository=src]
 
 `openssl` has been upgraded to 3.0.15.
 gitref:cc43f991ab3e[repository=src]
+
+`tcpdump` has been upgraded to 4.99.5.
+gitref:ec3da16d8bc1[repository=src] (Sponsored by The FreeBSD Foundation)
 
 `unbound` has been upgraded to 1.22.0.
 gitref:0a096a7b3ae8[repository=src]
@@ -231,6 +234,12 @@ gitref:0a096a7b3ae8[repository=src]
 
 man:fdisk[8] has been deprecated in favor of man:gpart[8] for a long time but has not been removed, running this application will show a warning to migrate to man:gpart[8].
 gitref:3958be5c29da[repository=src] (Sponsored by The FreeBSD Foundation)
+
+[[userland-libraries]]
+=== Runtime Libraries and API
+
+The accuracy of man:asinf[3] and acosf[3] has improved.
+gitref:33c82f11c267[repository=src]
 
 [[cloud]]
 == Cloud Support
