--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -376,6 +376,9 @@ gitref:34f40baca641[repository=src]
 The VNC server in man:bhyve[8] will now show the correct colors when using the package:www/novnc[] client.
 gitref:f9e09dc5b1d5[repository=src]
 
+Under Hyper-V, TLB flushes are now performed using hypercalls rather than IPIs, providing up to a 40% improvement in TLB performance.
+gitref:7ece5993b787[repository=src] (Sponsored by Microsoft)
+
 [[multimedia]]
 == Multimedia
 
