--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -346,7 +346,7 @@ Lots of improvements to the network stack, including performance improvements an
 AIM(Adaptive Interrupt Moderation) support has been added to the man:igc[4] driver.
 gitref:472a0ccf847a[repository=src] (Sponsored by Rubicon Communications, LLC ("Netgate") and BBOX.io)
 
-These features has also been added to the man:lem[4] and man:em[4] drivers.
+These features has also been added to the man:lem[4], man:em[4] and man:igb[4] drivers.  A major regression in UDP performance introduced in FreeBSD 12.0, including NFS over UDP, is believed to be fixed with this change.
 gitref:49f12d5b38f6[repository=src] (Sponsored by Rubicon Communications, LLC ("Netgate") and BBOX.io)
 
 [[wireless-networking]]
