--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -35,9 +35,6 @@ It also provides some notes on upgrading from previous versions of FreeBSD.
 The {releaseType} distribution to which these release notes apply represents the latest point along the {releaseBranch} development branch since {releaseBranch} was created.
 Information regarding pre-built, binary {releaseType} distributions along this branch can be found at https://www.FreeBSD.org/releases/[].
 
-The {releaseType} distribution to which these release notes apply represents a point along the {releaseBranch} development branch between {releasePrev} and the future {releaseNext}.
-Information regarding pre-built, binary {releaseType} distributions along this branch can be found at https://www.FreeBSD.org/releases/[].
-
 This distribution of FreeBSD {releaseCurrent} is a {releaseType} distribution.
 It can be found at https://www.FreeBSD.org/releases/[] or any of its mirrors.
 More information on obtaining this (or other) {releaseType} distributions of FreeBSD can be found in the link:{handbook}/mirrors[Obtaining FreeBSD appendix] to the link:{handbook}/[FreeBSD Handbook].
@@ -211,8 +208,14 @@ gitref:90ea553a0d30[repository=src]
 `libarchive` has been upgraded to 3.7.7.
 gitref:2ae238160f20[repository=src]
 
+`libcbor` has been upgraded to 0.11.0.
+gitref:1755b9daa693[repository=src] (Sponsored by The FreeBSD Foundation)
+
 `libcxxrt` has been upgraded to vendor snapshot 6f2fdfebcd62.
 gitref:d0dcee46d971[repository=src]
+
+`libfido2` has been upgraded to 1.14.0.
+gitref:128bace5102e[repository=src] (Sponsored by The FreeBSD Foundation)
 
 `libpcap` has been upgraded to 1.10.5.
 gitref:26f21a6494b4[repository=src] (Sponsored by The FreeBSD Foundation)
@@ -229,11 +232,17 @@ gitref:ec3da16d8bc1[repository=src] (Sponsored by The FreeBSD Foundation)
 `unbound` has been upgraded to 1.22.0.
 gitref:0a096a7b3ae8[repository=src]
 
-`libcbor` has been upgraded to 0.11.0.
-gitref:1755b9daa693[repository=src] (Sponsored by The FreeBSD Foundation)
+[[userland-libraries]]
+=== Runtime Libraries and API
 
-`libfido2` has been upgraded to 1.14.0.
-gitref:128bace5102e[repository=src] (Sponsored by The FreeBSD Foundation)
+man:fma[3] now returns correctly-signed zero when provided certain small inputs (as observed in the Python test suite).
+gitref:dc39004bc670[repository=src]
+(Sponsored by The FreeBSD Foundation)
+
+The `cap_rights_is_empty` function has been added.
+It reports whether a `cap_rights_t` has no rights set.
+gitref:e77813f7e4a3[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
 [[userland-deprecated-programs]]
 === Deprecated Applications
@@ -281,6 +290,14 @@ gitref:38a1655adcb3[repository=src] (Sponsored by Intel Corporation)
 
 `ice_ddp` has been upgraded to 1.3.41.0.
 gitref:a9d78bb714e3[repository=src] (Sponsored by Intel Corporation)
+
+Tiger Lake-H support has been added to the man:hda[4] driver.
+gitref:dbb6f488df6e[repository=src]
+
+Meteor Lake support has been added to the man:ichsmb(4) driver.
+gitref:14c22e28e4ee[repository=src]
+(Sponsored by Framework Computer Inc)
+(Sponsored by The FreeBSD Foundation)
 
 Meteor Lake support has been added to the man:ig4[4] driver.
 gitref:56f0fc0011c2[repository=src]
@@ -340,6 +357,10 @@ This section describes changes that affect networking in FreeBSD.
 
 Lots of improvements to the network stack, including performance improvements and bug fixes for the man:sctp[4] stack.
 
+Descriptors returned by man:sctp_peeloff[2] now inherit capabilities from the parent socket.
+gitref:ae3d7e27abc9[repository=src]
+(Sponsored by The FreeBSD Foundation)
+
 [[network-general]]
 === General Network
 
@@ -364,6 +385,10 @@ Please see link:https://www.freebsd.org/releases/{localRel}R/hardware[the list o
 [[processor]]
 === Processor Support
 
+The maximum IOAPIC ID has been increased to 255, fixing a boot failure on certain high-core-count AMD CPUs.
+gitref:18119e711f1c[repository=src]
+(Sponsored by The FreeBSD Foundation)
+
 Nominal support for POWER10 and POWER11 has been added.
 gitref:f9f006df1535[repository=src]
 
@@ -378,6 +403,13 @@ gitref:f9e09dc5b1d5[repository=src]
 
 Under Hyper-V, TLB flushes are now performed using hypercalls rather than IPIs, providing up to a 40% improvement in TLB performance.
 gitref:7ece5993b787[repository=src] (Sponsored by Microsoft)
+
+[[linuxulator]]
+=== Linux Binary Compatibility
+
+The `AT_NO_AUTOMOUNT` flag is now ignored for all Linuxulator stat() variants (as the behavior specified by the flag already matches FreeBSD's), improving Linux application compatibility.
+gitref:99d3ce80ba07[repository=src]
+(Sponsored by The FreeBSD Foundation)
 
 [[multimedia]]
 == Multimedia
