--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -294,7 +294,7 @@ gitref:a9d78bb714e3[repository=src] (Sponsored by Intel Corporation)
 Tiger Lake-H support has been added to the man:hda[4] driver.
 gitref:dbb6f488df6e[repository=src]
 
-Meteor Lake support has been added to the man:ichsmb(4) driver.
+Meteor Lake support has been added to the man:ichsmb[4] driver.
 gitref:14c22e28e4ee[repository=src]
 (Sponsored by Framework Computer Inc)
 (Sponsored by The FreeBSD Foundation)
