--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -250,10 +250,7 @@ gitref:e77813f7e4a3[repository=src]
 man:fdisk[8] has been deprecated in favor of man:gpart[8] for a long time but has not been removed, running this application will show a warning to migrate to man:gpart[8].
 gitref:3958be5c29da[repository=src] (Sponsored by The FreeBSD Foundation)
 
-[[userland-libraries]]
-=== Runtime Libraries and API
-
-The accuracy of man:asinf[3] and acosf[3] has improved.
+The accuracy of man:asinf[3] and man:acosf[3] has improved.
 gitref:33c82f11c267[repository=src]
 
 [[cloud]]
@@ -266,6 +263,12 @@ gitref:ea310d18b222[repository=src] (Sponsored by OVHCloud)
 
 The FreeBSD project is now publishing OCI-compatible container images.
 gitref:8a688fcc242e[repository=src]
+
+The FreeBSD project is now publishing Oracle Cloud Infrastructure images.
+See the
+link:https://cloudmarketplace.oracle.com/marketplace/app/freebsd-release[Oracle Cloud Infrastructure FreeBSD Listing]
+for more information.
+gitref:77b296a2582b[repository=src]
 
 The "shutdown" and "reboot" API in the Amazon EC2 cloud now work for arm64 instances.
 Older instances upgraded to FreeBSD {releaseCurrent} will need to have `debug.acpi.quirks="8"` set in `/boot/loader.conf`.
