Add information about jointing the FreeBSD GitHub org
Sponsored by:		Netflix

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -1877,6 +1877,14 @@ Once you're done, `git commit` and you'll have the remainder in your tree.
 You can run it multiple times as well, and even over multiple files (though I find it easier to do one file at a time
 and use the `git rebase -i` to fold the related commits together).
 
+===== Joining the FreeBSD GitHub oranization.
+
+**Q:** How do I join the FreeBSD GitHub organization?
+
+**A:** Please see https://wiki.freebsd.org/GitHub#Joining_the_Organisation[our GitHub Wiki Info] page for details.
+Briefly, all FreeBSD committers may join.
+Those who are not committers who request joining will be considered on a case by case basis.
+
 ==== Cloning and Mirroring
 
 **Q:** I'd like to mirror the entire Git repository, how do I do that?
