--- a/documentation/content/en/books/handbook/preface/_index.adoc
+++ b/documentation/content/en/books/handbook/preface/_index.adoc
@@ -48,7 +48,7 @@ endif::[]
 == Intended Audience
 
 The FreeBSD newcomer will find that the first section of this book guides the user through the FreeBSD installation process and gently introduces the concepts and conventions that underpin UNIX(R).
-Working through this section requires little more than the desire to explore, and the ability to take on board new concepts as they are introduced.
+Working through this section requires little more than the desire to explore, and the ability to take on broad new concepts as they are introduced.
 
 Once you have traveled this far, the second, far larger, section of the Handbook is a comprehensive reference to all manner of topics of interest to FreeBSD system administrators.
 Some of these chapters may recommend that you do some prior reading, and this is noted in the synopsis at the beginning of each chapter.
