administration: Add srcmgr group and link to charter

--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -23,6 +23,7 @@ This page lists teams, groups and individuals within the FreeBSD project with de
 ** <<t-portmgr, Ports Management Team>>
 ** <<t-ports-secteam, Ports Security Team>>
 ** <<t-pkgmgr, Packages Management Team>>
+** <<t-srcmgr, Source Management Team>>
 * Release Engineering
 ** <<t-re, Primary Release Engineering Team>>
 * Teams
@@ -116,6 +117,17 @@ The primary responsibility of the FreeBSD Packages Management Team is to assure 
 * {bdrewery}
 
 '''
+
+[[t-srcmgr]]
+== FreeBSD Source Management Team <srcmgr@FreeBSD.org>
+
+The FreeBSD Source Management Team (also known as srcmgr due to its email alias) is responsible for issues relating to the base system.
+The https://www.freebsd.org/srcmgr/charter/[srcmgr team charter] describes the duties and responsibilities of the Source Management Team in greater detail.
+
+* {emaste}
+* {imp}
+* {jhb}
+* {markj}
 
 [[t-re]]
 == Primary Release Engineering Team <re@FreeBSD.org>
