--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -1137,7 +1137,7 @@ set `PACKAGES` on the build system to a directory similar to `DISTDIR`.
 == Building on non-FreeBSD Hosts
 
 Historically, building FreeBSD required a FreeBSD host.
-Nowadays, the FreeBSD can be build on Linux distributions and macOS.
+Nowadays, FreeBSD can be built on Linux distributions and macOS.
 
 To build FreeBSD on non-FreeBSD hosts, the recommendation is to use the `tools/build/make.py` script.
 This script acts as a wrapper around `bmake`, which is the make implementation used by FreeBSD.
