Document __FreeBSD_version 1500029

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -205,6 +205,11 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |November 25, 2024
 |15.0-CURRENT after adding a `TDA_PSELECT` flag for early restoration of signal masks.
 
+|1500029
+|gitref:46297859a74563dde6fc5bff9f9ecded9fb61ba6[repository="src",length=12]
+|December 6, 2024
+|15.0-CURRENT after adding `bus_attach_children`, `bus_detach_children`, and `bus_identify_children`.
+
 |===
 
 [[versions-14]]
