--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -55,7 +55,7 @@ This table lists the code freeze status for major branches of the `src/` reposit
 |Branch |Status |Contact |Notes
 |`main` |Open |committers |Active development branch for 15.0-CURRENT.
 |`stable/14` |Open |committers |Development branch for FreeBSD 14-STABLE.
-|`releng/14.2` |Frozen |re@FreeBSD.org |FreeBSD 14.2 supported errata fix branch.
+|`releng/14.2` |Frozen |security-officer@FreeBSD.org |FreeBSD 14.2 supported errata fix branch.
 |`releng/14.1` |Frozen |security-officer@FreeBSD.org |FreeBSD 14.1 supported errata fix branch.
 |`releng/14.0` |Frozen |security-officer@FreeBSD.org |FreeBSD 14.0 errata fix branch (not officially supported).
 |`stable/13` |Open |committers |Development branch for FreeBSD 13-STABLE.
