--- a/documentation/content/en/books/handbook/wayland/_index.adoc
+++ b/documentation/content/en/books/handbook/wayland/_index.adoc
@@ -370,6 +370,11 @@ To start Hikari, use the following command:
 [[wayland-sway]]
 == The Sway Compositor
 
+[NOTE]
+====
+Make sure you have installed needed drivers for your GPU. otherwise it would give error "0 GPU detected".
+====
+
 The Sway compositor is a tiling compositor that attempts to replace the i3 windows manager.
 It should work with the user's current i3 configuration; however, new features may require some additional setup.
 In the forthcoming examples, a fresh installation without migrating any i3 configuration will be assumed.
