--- a/website/content/en/status/report-2024-10-2024-12/pot.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/pot.adoc
@@ -12,7 +12,7 @@ Potluck aims to be to FreeBSD and Pot what Dockerhub is to Linux and Docker: a r
 
 During this quarter, there was a new link:https://github.com/bsdpot/pot[Pot] release. It contains mainly bug fixes.
 
-All Potluck images have been rebuilt several times for FreeBSD 14.1, security fixes and then again for 14.2 as well as for the new quarterly packages. 
+While there were no new Potluck images being added this quarter, all images have been rebuilt several times for FreeBSD 14.1, security fixes and then again for 14.2 as well as for the new quarterly packages. 
 
 Additionally, various images have received improvements and bug fixes, e.g. improving their syslog-ng integration.
 
